--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -173,43 +173,46 @@
       <Version>2.15.0</Version>
     </PackageReference>
     <PackageReference Include="MQTTnet">
-      <Version>3.0.16</Version>
+      <Version>3.1.0</Version>
     </PackageReference>
     <PackageReference Include="NINA.Astrometry">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Core">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Equipment">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Image">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.MGEN">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.PlateSolving">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Plugin">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Profile">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Sequencer">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.WPF.Base">
-      <Version>2.0.0.2001-beta</Version>
+      <Version>2.0.0.2004-beta</Version>
+    </PackageReference>
+    <PackageReference Include="NINACustomControlLibrary">
+      <Version>2.0.0.2004-beta</Version>
     </PackageReference>
     <PackageReference Include="PushoverNET">
       <Version>1.0.28</Version>
     </PackageReference>
     <PackageReference Include="Telegram.Bot">
-      <Version>16.0.2</Version>
+      <Version>17.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
