Minimum NINA version 2.0 beta 11

--- a/App.config
+++ b/App.config
@@ -109,6 +109,12 @@ Reasons: $$ERROR_LIST$$
             <setting name="IftttFailureValue3" serializeAs="String">
                 <value>$$DATETIME$$</value>
             </setting>
+            <setting name="MqttDefaultFailureQoSLevel" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="MqttDefaultQoSLevel" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
