--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -104,5 +104,11 @@ Reasons: $$ERROR_LIST$$
     <Setting Name="IftttFailureValue3" Type="System.String" Scope="User">
       <Value Profile="(Default)">$$DATETIME$$</Value>
     </Setting>
+    <Setting Name="MqttDefaultFailureQoSLevel" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="MqttDefaultQoSLevel" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
