Add LWT support

--- a/App.config
+++ b/App.config
@@ -74,7 +74,7 @@
                 <value />
             </setting>
             <setting name="MqttClientId" serializeAs="String">
-                <value>NINA</value>
+                <value />
             </setting>
             <setting name="PushoverFailureTitleText" serializeAs="String">
                 <value>Failure running $$FAILED_ITEM$$</value>
@@ -114,6 +114,18 @@ Reasons: $$ERROR_LIST$$
             </setting>
             <setting name="MqttDefaultQoSLevel" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="MqttLwtEnable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="MqttLwtTopic" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MqttLwtBirthPayload" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MqttLwtLastWillPayload" serializeAs="String">
+                <value />
             </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
