--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -53,6 +53,7 @@
     <Compile Include="HTTP\HttpClientTemplate.xaml.cs">
       <DependentUpon>HttpClientTemplate.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MQTT\MqttClient.cs" />
     <Compile Include="MQTT\FailuresToMqttTrigger.cs" />
     <Compile Include="MQTT\FailuresToMqttTriggerTemplate.xaml.cs">
       <DependentUpon>FailuresToMqttTriggerTemplate.xaml</DependentUpon>
@@ -176,37 +177,37 @@
       <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="NINA.Astrometry">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Core">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Equipment">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Image">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.MGEN">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.PlateSolving">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Plugin">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Profile">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Sequencer">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.WPF.Base">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="NINACustomControlLibrary">
-      <Version>2.0.0.2011-beta</Version>
+      <Version>2.0.0.2013-beta</Version>
     </PackageReference>
     <PackageReference Include="PushoverNET">
       <Version>1.0.28</Version>
