Add close message for LWT sessions

--- a/App.config
+++ b/App.config
@@ -127,6 +127,9 @@ Reasons: $$ERROR_LIST$$
             <setting name="MqttLwtLastWillPayload" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MqttLwtClosePayload" serializeAs="String">
+                <value />
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
