--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -64,8 +64,9 @@
       <DependentUpon>SendToMqttTemplate.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pushover\PushoverCommon.cs" />
-    <Compile Include="Utilities.cs" />
-    <Compile Include="Security.cs" />
+    <Compile Include="Utilities\FailureList.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
+    <Compile Include="Utilities\Security.cs" />
     <Compile Include="Email\FailuresToEmailTrigger.cs" />
     <Compile Include="Email\FailuresToEmailTriggerTemplate.xaml.cs">
       <DependentUpon>FailuresToEmailTriggerTemplate.xaml</DependentUpon>
@@ -177,37 +178,37 @@
       <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="NINA.Astrometry">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Core">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Equipment">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Image">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.MGEN">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.PlateSolving">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Plugin">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Profile">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.Sequencer">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINA.WPF.Base">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="NINACustomControlLibrary">
-      <Version>2.0.0.2020-prerelease</Version>
+      <Version>2.0.0.2021-beta</Version>
     </PackageReference>
     <PackageReference Include="PushoverNET">
       <Version>1.0.28</Version>
