Add a reconnect attempt cap for MQTT

--- a/App.config
+++ b/App.config
@@ -130,6 +130,9 @@ Reasons: $$ERROR_LIST$$
             <setting name="MqttLwtClosePayload" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MqttMaxReconnectAttempts" serializeAs="String">
+                <value>3</value>
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
