--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -125,5 +125,8 @@ Reasons: $$ERROR_LIST$$
     <Setting Name="MqttLwtClosePayload" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MqttMaxReconnectAttempts" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
