--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -178,37 +178,37 @@
       <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="NINA.Astrometry">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.Core">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.Equipment">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.Image">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.MGEN">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.PlateSolving">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.Plugin">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.Profile">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.Sequencer">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINA.WPF.Base">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="NINACustomControlLibrary">
-      <Version>2.0.0.2037-beta</Version>
+      <Version>2.0.0.2050-preview3</Version>
     </PackageReference>
     <PackageReference Include="PushoverNET">
       <Version>1.0.28</Version>
@@ -222,14 +222,15 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exist "%25localappdata%25\NINA\Plugins" (
-      echo "Creating $(PlatformName) Plugins folder"
-      mkdir  "%25localappdata%25\NINA\Plugins"
+    <PostBuildEvent>
+if not exist "%25localappdata%25\NINA\Plugins" (
+    echo "Creating $(PlatformName) Plugins folder"
+    mkdir  "%25localappdata%25\NINA\Plugins"
 )
 
 if not exist "%25localappdata%25\NINA\Plugin\$(TargetName)" (
-      echo "Creating $(PlatformName) Plugins $(TargetName) folder"
-      mkdir  "%25localappdata%25\NINA\Plugins\$(TargetName)"
+    echo "Creating $(PlatformName) Plugins $(TargetName) folder"
+    mkdir  "%25localappdata%25\NINA\Plugins\$(TargetName)"
 )
 
 echo "Copying $(PlatformName) $(TargetFileName)"
