Add a new instruction and failure trigger to send messages to Text-To-Speech

--- a/App.config
+++ b/App.config
@@ -133,6 +133,9 @@ Reasons: $$ERROR_LIST$$
             <setting name="MqttMaxReconnectAttempts" serializeAs="String">
                 <value>3</value>
             </setting>
+            <setting name="TTSFailureMessage" serializeAs="String">
+                <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts! Reasons: $$ERROR_LIST$$</value>
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
