Add Google OAuth2 and GMail aupport

--- a/App.config
+++ b/App.config
@@ -136,6 +136,15 @@ Reasons: $$ERROR_LIST$$
             <setting name="TTSFailureMessage" serializeAs="String">
                 <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts! Reasons: $$ERROR_LIST$$</value>
             </setting>
+            <setting name="EmailSystem" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="GmailOauth2Token" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GoogleAccountName" serializeAs="String">
+                <value />
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
