--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -76,6 +76,8 @@
     </Compile>
     <Compile Include="TTS\TTS.cs" />
     <Compile Include="Utilities\BackgroundQueueWorker.cs" />
+    <Compile Include="Utilities\GoogleOauth2.cs" />
+    <Compile Include="Utilities\Lists.cs" />
     <Compile Include="Utilities\FailedItem.cs" />
     <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="Utilities\Security.cs" />
@@ -191,8 +193,14 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth">
+      <Version>1.57.0</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Apis.Gmail.v1">
+      <Version>1.57.0.2650</Version>
+    </PackageReference>
     <PackageReference Include="MailKit">
-      <Version>3.0.0</Version>
+      <Version>3.3.0</Version>
     </PackageReference>
     <PackageReference Include="MQTTnet">
       <Version>3.1.1</Version>
@@ -265,6 +273,16 @@ xcopy "$(TargetDir)MailKit.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" 
 xcopy "$(TargetDir)MimeKit.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
 xcopy "$(TargetDir)BouncyCastle.Crypto.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
 xcopy "$(TargetDir)Telegram.Bot.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)MQTTnet.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y</PostBuildEvent>
+xcopy "$(TargetDir)MQTTnet.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Apis.Auth.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Apis.Auth.PlatformServices.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Apis.Core.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Apis.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Apis.Gmail.v1.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Apis.PlatformServices.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Google.Protobuf.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)Grpc.Core.Api.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)GrpcDotNetNamedPipes.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
+xcopy "$(TargetDir)System.Text.Encoding.CodePages.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y</PostBuildEvent>
   </PropertyGroup>
 </Project>
