Add AUTHORS file

--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -240,6 +240,9 @@
   <ItemGroup>
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="AUTHORS.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
