--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -1,275 +1,61 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{738D56B5-DF32-4932-9344-883E9731D3AB}</ProjectGuid>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DaleGhent.NINA.GroundStation</RootNamespace>
     <AssemblyName>DaleGhent.NINA.GroundStation</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWPF>true</UseWPF>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Speech" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Presentation" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Email\EmailCommon.cs" />
-    <Compile Include="HTTP\HttpClient.cs" />
-    <Compile Include="HTTP\HttpClientTemplate.xaml.cs">
-      <DependentUpon>HttpClientTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MetadataClient\Metadata.cs" />
-    <Compile Include="MetadataClient\IMetadata.cs" />
-    <Compile Include="MQTT\MqttClient.cs" />
-    <Compile Include="MQTT\FailuresToMqttTrigger.cs" />
-    <Compile Include="MQTT\FailuresToMqttTriggerTemplate.xaml.cs">
-      <DependentUpon>FailuresToMqttTriggerTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MQTT\MqttCommon.cs" />
-    <Compile Include="MQTT\SendToMqtt.cs" />
-    <Compile Include="MQTT\SendToMqttTemplate.xaml.cs">
-      <DependentUpon>SendToMqttTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pushover\PushoverCommon.cs" />
-    <Compile Include="TTS\FailuresToTTS.cs" />
-    <Compile Include="TTS\FailuresToTTSTemplate.xaml.cs">
-      <DependentUpon>FailuresToTTSTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="TTS\SendToTTS.cs" />
-    <Compile Include="TTS\SendToTTSTemplate.xaml.cs">
-      <DependentUpon>SendToTTSTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="TTS\TTS.cs" />
-    <Compile Include="Utilities\BackgroundQueueWorker.cs" />
-    <Compile Include="Utilities\FailedItem.cs" />
-    <Compile Include="Utilities\Utilities.cs" />
-    <Compile Include="Utilities\Security.cs" />
-    <Compile Include="Email\FailuresToEmailTrigger.cs" />
-    <Compile Include="Email\FailuresToEmailTriggerTemplate.xaml.cs">
-      <DependentUpon>FailuresToEmailTriggerTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Email\SendToEmail.cs" />
-    <Compile Include="Email\SendToEmailTemplate.xaml.cs">
-      <DependentUpon>SendToEmailTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="IFTTT\IftttCommon.cs" />
-    <Compile Include="Pushover\FailuresToPushoverTrigger.cs" />
-    <Compile Include="Pushover\FailuresToPushoverTriggerTemplate.xaml.cs">
-      <DependentUpon>FailuresToPushoverTriggerTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GroundStation.cs" />
-    <Compile Include="IFTTT\FailuresToIftttTrigger.cs" />
-    <Compile Include="IFTTT\FailuresToIftttTriggerTemplate.xaml.cs">
-      <DependentUpon>FailuresToIftttTriggerTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="IFTTT\SendToIftttWebhookTemplate.xaml.cs">
-      <DependentUpon>SendToIftttWebhookTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Options.xaml.cs">
-      <DependentUpon>Options.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <DependentUpon>Settings.settings</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="IFTTT\SendToIftttWebhook.cs" />
-    <Compile Include="Pushover\SendToPushover.cs" />
-    <Compile Include="Pushover\SendToPushoverTemplate.xaml.cs">
-      <DependentUpon>SendToPushoverTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Telegram\FailuresToTelegramTrigger.cs" />
-    <Compile Include="Telegram\FailuresToTelegramTriggerTemplate.xaml.cs">
-      <DependentUpon>FailuresToTelegramTriggerTemplate.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Telegram\TelegramCommon.cs" />
-    <Compile Include="Telegram\SendToTelegram.cs" />
-    <Compile Include="Telegram\SendToTelegramTemplate.xaml.cs">
-      <DependentUpon>SendToTelegramTemplate.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="CHANGELOG.md" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Email\FailuresToEmailTriggerTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Email\SendToEmailTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="HTTP\HttpClientTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="MQTT\FailuresToMqttTriggerTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="MQTT\SendToMqttTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pushover\FailuresToPushoverTriggerTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="IFTTT\FailuresToIftttTriggerTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="IFTTT\SendToIftttWebhookTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Options.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pushover\SendToPushoverTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Telegram\FailuresToTelegramTriggerTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Telegram\SendToTelegramTemplate.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="TTS\FailuresToTTSTemplate.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="TTS\SendToTTSTemplate.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MailKit">
-      <Version>3.4.0</Version>
+      <Version>3.4.1</Version>
+      <IncludeAssets></IncludeAssets>
     </PackageReference>
     <PackageReference Include="MQTTnet">
       <Version>3.1.2</Version>
     </PackageReference>
-    <PackageReference Include="NINA.Astrometry">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.Core">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.Equipment">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.Image">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.MGEN">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.PlateSolving">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.Plugin">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.Profile">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.Sequencer">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINA.WPF.Base">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
-    <PackageReference Include="NINACustomControlLibrary">
-      <Version>2.0.1.9001</Version>
-    </PackageReference>
+    <PackageReference Include="NINA.Plugin" Version="3.0.0.1001-preview1" />
     <PackageReference Include="PushoverNET">
       <Version>1.0.28</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Telegram.Bot">
       <Version>18.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.346202">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="README.md" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="AUTHORS.md" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<PropertyGroup>
+		<CopyLocalLockFileAssemblies>True</CopyLocalLockFileAssemblies>
+	</PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>
-if not exist "%25localappdata%25\NINA\Plugins" (
-    echo "Creating $(PlatformName) Plugins folder"
-    mkdir  "%25localappdata%25\NINA\Plugins"
-)
-
-if not exist "%25localappdata%25\NINA\Plugin\$(TargetName)" (
-    echo "Creating $(PlatformName) Plugins $(TargetName) folder"
-    mkdir  "%25localappdata%25\NINA\Plugins\$(TargetName)"
-)
-
-echo "Copying $(PlatformName) $(TargetFileName)"
-xcopy "$(TargetPath)" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)\$(TargetName).pdb" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)PushoverClient.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)ServiceStack.Text.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)System.Memory.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)System.Buffers.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)System.Numerics.Vectors.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)MailKit.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)MimeKit.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)BouncyCastle.Crypto.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)Telegram.Bot.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)MQTTnet.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y</PostBuildEvent>
+    <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
   </PropertyGroup>
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="if not exist &quot;%25localappdata%25\NINA\Plugins&quot; (&#xD;&#xA;    echo &quot;Creating $(PlatformName) Plugins folder&quot;&#xD;&#xA;    mkdir  &quot;%25localappdata%25\NINA\Plugins&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;if not exist &quot;%25localappdata%25\NINA\Plugin\$(TargetName)&quot; (&#xD;&#xA;    echo &quot;Creating $(PlatformName) Plugins $(TargetName) folder&quot;&#xD;&#xA;    mkdir  &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot;&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;echo &quot;Copying artifacts&quot;&#xD;&#xA;xcopy &quot;$(TargetPath)&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)PushoverClient.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)ServiceStack.Text.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)System.Memory.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)System.Buffers.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)System.Numerics.Vectors.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)MailKit.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)MimeKit.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)BouncyCastle.Crypto.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)Telegram.Bot.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y&#xD;&#xA;xcopy &quot;$(TargetDir)MQTTnet.dll&quot; &quot;%25localappdata%25\NINA\Plugins\$(TargetName)&quot; /h/i/c/k/e/r/y" />
+  </Target>
 </Project>
