--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -14,13 +14,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MailKit">
-      <Version>3.4.1</Version>
+      <Version>3.4.2</Version>
       <IncludeAssets></IncludeAssets>
     </PackageReference>
     <PackageReference Include="MQTTnet">
       <Version>3.1.2</Version>
     </PackageReference>
-    <PackageReference Include="NINA.Plugin" Version="3.0.0.1001-preview1" />
+    <PackageReference Include="NINA.Plugin" Version="3.0.0.1001-nightly" />
     <PackageReference Include="PushoverNET">
       <Version>1.0.28</Version>
     </PackageReference>
@@ -28,10 +28,10 @@
     <PackageReference Include="Telegram.Bot">
       <Version>18.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.346202">
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.355802">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
   </ItemGroup>
 	<PropertyGroup>
 		<CopyLocalLockFileAssemblies>True</CopyLocalLockFileAssemblies>
