--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -67,7 +67,9 @@
     <Compile Include="MQTT\SendToMqttTemplate.xaml.cs">
       <DependentUpon>SendToMqttTemplate.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pushover\PushoverCommon.cs" />
+    <Compile Include="PushoverClient\NotificationSound.cs" />
+    <Compile Include="PushoverClient\Priority.cs" />
+    <Compile Include="PushoverClient\PushoverClient.cs" />
     <Compile Include="TTS\FailuresToTTS.cs" />
     <Compile Include="TTS\FailuresToTTSTemplate.xaml.cs">
       <DependentUpon>FailuresToTTSTemplate.xaml</DependentUpon>
@@ -232,9 +234,6 @@
     <PackageReference Include="NINACustomControlLibrary">
       <Version>2.0.1.9001</Version>
     </PackageReference>
-    <PackageReference Include="PushoverNET">
-      <Version>1.0.28</Version>
-    </PackageReference>
     <PackageReference Include="Telegram.Bot">
       <Version>18.0.0</Version>
     </PackageReference>
@@ -261,7 +260,6 @@ if not exist "%25localappdata%25\NINA\Plugin\$(TargetName)" (
 echo "Copying $(PlatformName) $(TargetFileName)"
 xcopy "$(TargetPath)" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
 xcopy "$(TargetDir)\$(TargetName).pdb" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
-xcopy "$(TargetDir)PushoverClient.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
 xcopy "$(TargetDir)ServiceStack.Text.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
 xcopy "$(TargetDir)System.Memory.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
 xcopy "$(TargetDir)System.Buffers.dll" "%25localappdata%25\NINA\Plugins\$(TargetName)" /h/i/c/k/e/r/y
