Add support for Pushover Emergency status

--- a/App.config
+++ b/App.config
@@ -53,7 +53,7 @@
                 <value>Normal</value>
             </setting>
             <setting name="PushoverDefaultFailurePriority" serializeAs="String">
-                <value>High</value>
+                <value>Emergency</value>
             </setting>
             <setting name="MqttBrokerHost" serializeAs="String">
                 <value />
@@ -135,6 +135,12 @@ Reasons: $$ERROR_LIST$$
             </setting>
             <setting name="TTSFailureMessage" serializeAs="String">
                 <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts! Reasons: $$ERROR_LIST$$</value>
+            </setting>
+            <setting name="PushoverEmergRetryInterval" serializeAs="String">
+                <value>60</value>
+            </setting>
+            <setting name="PushoverEmergExpireAfter" serializeAs="String">
+                <value>600</value>
             </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
