--- a/App.config
+++ b/App.config
@@ -142,6 +142,12 @@ Reasons: $$ERROR_LIST$$
             <setting name="PushoverEmergExpireAfter" serializeAs="String">
                 <value>600</value>
             </setting>
+            <setting name="PlaySoundDefaultFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PlaySoundDefaultFailureFile" serializeAs="String">
+                <value />
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
