--- a/App.config
+++ b/App.config
@@ -148,6 +148,20 @@ Reasons: $$ERROR_LIST$$
             <setting name="PlaySoundDefaultFailureFile" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DiscordWebhookDefaultUrl" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DiscordWebhookDefaultBotName" serializeAs="String">
+                <value>N.I.N.A.</value>
+            </setting>
+            <setting name="DiscordWebhookFailureMessage" serializeAs="String">
+                <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts!
+
+Reasons: $$ERROR_LIST$$</value>
+            </setting>
+            <setting name="DiscordImageWebhookDefaultUrl" serializeAs="String">
+                <value />
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
