--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -143,5 +143,19 @@ Reasons: $$ERROR_LIST$$
     <Setting Name="PlaySoundDefaultFailureFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DiscordWebhookDefaultUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DiscordWebhookDefaultBotName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">N.I.N.A.</Value>
+    </Setting>
+    <Setting Name="DiscordWebhookFailureMessage" Type="System.String" Scope="User">
+      <Value Profile="(Default)">$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts!
+
+Reasons: $$ERROR_LIST$$</Value>
+    </Setting>
+    <Setting Name="DiscordImageWebhookDefaultUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
