Revamp settings facilities

--- a/App.config
+++ b/App.config
@@ -71,7 +71,7 @@
                 <value>False</value>
             </setting>
             <setting name="MqttDefaultTopic" serializeAs="String">
-                <value />
+                <value>/nina</value>
             </setting>
             <setting name="MqttClientId" serializeAs="String">
                 <value />
@@ -119,7 +119,7 @@ Reasons: $$ERROR_LIST$$
                 <value>False</value>
             </setting>
             <setting name="MqttLwtTopic" serializeAs="String">
-                <value />
+                <value>/nina/lastwill</value>
             </setting>
             <setting name="MqttLwtBirthPayload" serializeAs="String">
                 <value />
@@ -159,8 +159,27 @@ Reasons: $$ERROR_LIST$$
 
 Reasons: $$ERROR_LIST$$</value>
             </setting>
-            <setting name="DiscordImageWebhookDefaultUrl" serializeAs="String">
+            <setting name="DiscordImageWebhookUrl" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="DiscordFailureWebhookUrl" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DiscordImageTypesSelected" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>LIGHT</string>
+                        <string>SNAPSHOT</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="TtsTestMessage" serializeAs="String">
+                <value>It's full of stars!</value>
+            </setting>
+            <setting name="GroundStationMigratedProfiles" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+                </value>
             </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
