Default settings for discord failure message

--- a/App.config
+++ b/App.config
@@ -155,22 +155,10 @@ Reasons: $$ERROR_LIST$$
             <setting name="PlaySoundDefaultFailureFile" serializeAs="String">
                 <value />
             </setting>
-            <setting name="DiscordWebhookDefaultUrl" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="DiscordWebhookDefaultBotName" serializeAs="String">
-                <value>N.I.N.A.</value>
-            </setting>
             <setting name="DiscordWebhookFailureMessage" serializeAs="String">
                 <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts!
 
-Reasons: $$ERROR_LIST$$</value>
-            </setting>
-            <setting name="DiscordImageWebhookUrl" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="DiscordFailureWebhookUrl" serializeAs="String">
-                <value />
+**Reasons:** $$ERROR_LIST$$</value>
             </setting>
             <setting name="DiscordImageTypesSelected" serializeAs="Xml">
                 <value>
