Add support for Slack

--- a/App.config
+++ b/App.config
@@ -160,14 +160,6 @@ Reasons: $$ERROR_LIST$$
 
 **Reasons:** $$ERROR_LIST$$</value>
             </setting>
-            <setting name="DiscordImageTypesSelected" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-                        <string>LIGHT</string>
-                        <string>SNAPSHOT</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
             <setting name="TtsTestMessage" serializeAs="String">
                 <value>It's full of stars!</value>
             </setting>
@@ -175,6 +167,11 @@ Reasons: $$ERROR_LIST$$
                 <value>
                     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
                 </value>
+            </setting>
+            <setting name="SlackFailureMessage" serializeAs="String">
+                <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts!
+
+*Reasons:* $$ERROR_LIST$$</value>
             </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
