Add ntfy.sh support

--- a/App.config
+++ b/App.config
@@ -173,6 +173,17 @@ Reasons: $$ERROR_LIST$$
 
 *Reasons:* $$ERROR_LIST$$</value>
             </setting>
+            <setting name="NtfyShFailureTitle" serializeAs="String">
+                <value>Failure running $$FAILED_ITEM$$</value>
+            </setting>
+            <setting name="NtfyShFailureMessage" serializeAs="String">
+                <value>$$FAILED_ITEM$$ failed after $$FAILED_ATTEMPTS$$ attempts!
+
+Reasons: $$ERROR_LIST$$</value>
+            </setting>
+            <setting name="NtfyShFailureTags" serializeAs="String">
+                <value>exclamation</value>
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
