Fix Discord failure embed titles

--- a/App.config
+++ b/App.config
@@ -184,6 +184,9 @@ Reasons: $$ERROR_LIST$$</value>
             <setting name="NtfyShFailureTags" serializeAs="String">
                 <value>exclamation</value>
             </setting>
+            <setting name="DiscordWebhookFailureTitle" serializeAs="String">
+                <value>Failure running $$FAILED_ITEM$$</value>
+            </setting>
         </DaleGhent.NINA.GroundStation.Properties.Settings>
     </userSettings>
 </configuration>
